@@ -19,36 +19,39 @@ public class ImageOrganizerService {
 
   private static final Logger logger = LoggerFactory.getLogger(ImageOrganizerService.class);
 
-  public void organizeImages(String dir, int year) throws IOException {
+  public void organizeImages(String dir, int year) {
     logger.info("ImageOrganizerService.organizeImages(), args: {}", dir);
     Path path = Paths.get(dir);
 
     if (!(Files.exists(path) && Files.isDirectory(path))) {
-      throw new RuntimeException(String.format("Path must exist and be a directory: %s", dir));
+      logger.info("Path must exist and be a directory: {}", dir);
     }
 
     try (Stream<Path> stream = Files.list(path)) {
-      stream
-          .filter(childPath -> Files.isRegularFile(childPath))
+      stream.filter(Files::isRegularFile)
           .forEach(childPath -> {
             try {
               BasicFileAttributes data = Files.readAttributes(childPath, BasicFileAttributes.class);
               LocalDate date = Instant.ofEpochMilli(data.lastModifiedTime().toMillis()).atZone(ZoneId.systemDefault())
                   .toLocalDate();
               if (date.getYear() == year) {
-                String month = String.format("%02d", date.getMonth().getValue());
-                Files.createDirectories(Path.of(dir, month));
-                Path newChildPath = Path.of(dir, month, childPath.getFileName().toString());
+                String month = String.format("%02d", date.getMonthValue());
+                Path monthPath = Paths.get(dir, month);
+                Files.createDirectories(monthPath);
+                Path newChildPath = monthPath.resolve(childPath.getFileName().toString());
                 logger.info("New path: {}", newChildPath);
                 Files.move(childPath, newChildPath);
               } else {
                 logger.info("File year does not match {} {} {}", childPath.getFileName(), date.getYear(), year);
               }
-
-            } catch (IOException e) {
+            }
+            catch (IOException e) {
               logger.error("IO error", e);
             }
           });
+    }
+    catch (IOException e) {
+      logger.error("IO error", e);
     }
   }
 
